<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerInside"
            android:src="@drawable/sound_unpressed"
            android:background="@color/background"
            android:id="@+id/highlightImage"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/highlightImage"
            android:text="@string/rate_title"
            android:id="@+id/titleRate"
            android:textColor="@color/colorPrimarySuperDark"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:padding="10dp"/>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleRate"
            android:id="@+id/starsPanel">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/starMiddle"
                android:src="@drawable/star"
                android:layout_centerHorizontal="true"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/starMiddle"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/starLeft1"
                android:src="@drawable/star"
                android:layout_centerHorizontal="true"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/starLeft1"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/starLeft2"
                android:src="@drawable/star"
                android:layout_centerHorizontal="true"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/starMiddle"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/starRight1"
                android:src="@drawable/star"
                android:layout_centerHorizontal="true"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/starRight1"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/starRight2"
                android:src="@drawable/star"
                android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rateText"
            android:layout_margin="10dp"
            android:layout_below="@id/starsPanel"
            android:textColor="@color/colorPrimarySuperDark"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textSize="16dp"
            android:text="@string/rate_text"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rateOK"
            android:layout_below="@id/rateText"
            android:textColor="@android:color/white"
            android:background="@drawable/button_bg_solid"
            android:text="@string/rate_btn_ok"
            android:layout_margin="10dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rateLater"
            android:text="@string/rate_btn_later"
            android:textColor="@color/colorPrimarySuperDark"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/rateOK"
            android:layout_margin="10dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rateDeny"
            android:text="@string/rate_btn_never"
            android:textColor="@color/colorPrimarySuperDark"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/rateLater"
            android:layout_margin="10dp"/>
</RelativeLayout>